WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55553
When displaying the missing plug-in sheet, pass the 'pluginspage' attribute to the UI process.
https://bugs.webkit.org/show_bug.cgi?id=55553
Summary
When displaying the missing plug-in sheet, pass the 'pluginspage' attribute t...
Andy Estes
Reported
2011-03-01 22:54:37 PST
When displaying the missing plug-in sheet, pass the 'pluginspage' attribute to the UI process.
Attachments
Patch
(8.81 KB, patch)
2011-03-01 23:15 PST
,
Andy Estes
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2011-03-01 23:15:12 PST
Created
attachment 84371
[details]
Patch
Andy Estes
Comment 2
2011-03-01 23:18:49 PST
<
rdar://problem/9057876
>
Darin Adler
Comment 3
2011-03-02 16:36:29 PST
Comment on
attachment 84371
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=84371&action=review
> Source/WebKit2/WebProcess/WebCoreSupport/WebChromeClient.cpp:461 > + m_page->send(Messages::WebPageProxy::MissingPluginButtonClicked(pluginElement->serviceType(), pluginElement->url(), pluginElement->getAttribute("pluginspage")));
For better performance, this should be: fastGetAttribute(pluginspageAttr); And that might require exporting another symbol.
Andy Estes
Comment 4
2011-03-02 16:43:57 PST
(In reply to
comment #3
)
> (From update of
attachment 84371
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=84371&action=review
> > > Source/WebKit2/WebProcess/WebCoreSupport/WebChromeClient.cpp:461 > > + m_page->send(Messages::WebPageProxy::MissingPluginButtonClicked(pluginElement->serviceType(), pluginElement->url(), pluginElement->getAttribute("pluginspage"))); > > For better performance, this should be: > > fastGetAttribute(pluginspageAttr); > > And that might require exporting another symbol.
Thanks for the review! Will do.
Andy Estes
Comment 5
2011-03-03 16:45:50 PST
Committed <
http://trac.webkit.org/changeset/80297
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug