When displaying the missing plug-in sheet, pass the 'pluginspage' attribute to the UI process. https://bugs.webkit.org/show_bug.cgi?id=55553

Reviewed by Darin Adler.

Source/WebCore:

* WebCore.exp.in: Export __ZN7WebCore9HTMLNames15pluginspageAttrE.
* html/HTMLAttributeNames.in: Add 'pluginspage' as a known content
attribute.

Source/WebKit2:

* UIProcess/API/C/WKPage.h: Add pluginsPageURL as the third argument to
missingPluginButtonClicked.
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::missingPluginButtonClicked): Ditto.
* UIProcess/WebPageProxy.h: Ditto.
* UIProcess/WebPageProxy.messages.in: Ditto.
* UIProcess/WebUIClient.cpp:
(WebKit::WebUIClient::missingPluginButtonClicked): Ditto.
* UIProcess/WebUIClient.h: Ditto.
* WebProcess/WebCoreSupport/WebChromeClient.cpp:
(WebKit::WebChromeClient::missingPluginButtonClicked): Get the value of
pluginspageAttr.



Canonical link: https://commits.webkit.org/70192@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80297 268f45cc-cd09-0410-ab3c-d52691b4dbfc